# v2

./: .env-example  README.md  alembic.ini  docker-compose.yml  logging.ini  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 20dd3203b295_initial_migration.py  30b740b441fd_auto_revision.py  335cc6680352_add_user_and_billing_address.py  41cceca16003_auto_revision.py  55b3e63b8804_add_username.py  8123c5ce0182_initial_migration.py  84dc5b43bd35_change_user.py  a013a5aa80bb_auto_revision.py  b3d9098aa894_initial_migration.py  c7431c2da5cc_auto_revision.py  cdde97b661de_initial_migration.py  d364e00aae99_initial_migration.py  e1d5845b0e11_add_user_and_billing_address.py  f5461f7eae13_test.py
alembic_old/: env.py
app/: config.py  database.py  exceptions.py  logger.py  main.py  middlewares.py  models.py
app/auth/: router.py  service.py
app/billing_address/: models.py
app/user/: consts.py  crud.py  models.py  router.py  schemas.py  service.py
requirements/: dev.txt
src/: config.py  consts.py  database.py  exception_handlers.py  exceptions.py  main.py  middlewares.py  models.py  repository.py  schemas.py  scripts.py  utils.py
src/auth/: router.py
src/billing_address/: models.py  schemas.py
src/database/: base_repository.py  database.py  models.py
src/exceptions/: exception_handlers.py  exceptions.py
src/middlewares/: middlewares.py
src/modules/auth/: deps.py  router.py  schemas.py  service.py  utils.py
src/modules/billing_address/: models.py
src/modules/email/: email_template.html  service.py
src/modules/user/: consts.py  crud.py  deps.py  models.py  router.py  schemas.py  service.py  utils.py
src/user/: constants.py  crud.py  models.py  router.py  schemas.py  service.py
src/utils/: base_repository.py  base_schema.py  base_service.py  convert_to_model.py  logger.py  require_auth_decorator.py  token_handler.py  token_service.py
tests/: user.py
