[tool.black]
line-length = 120
[tool.poetry]
name = "fastapi-skratch"
version = "0.1.0"
description = ""
authors = ["Pryann <pryann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.1"
annotated-types = "0.7.0"
anyio = "4.3.0"
asyncpg = "0.29.0"
bcrypt = "4.1.3"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
databases = "0.9.0"
deprecated = "1.2.14"
distlib = "0.3.8"
dnspython = "2.6.1"
dulwich = "0.21.7"
ecdsa = "0.19.0"
email-validator = "2.1.1"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
fastapi-jwt-auth = "0.5.0"
fastjsonschema = "2.19.1"
filelock = "3.14.0"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
humps = "0.2.2"
idna = "3.7"
importlib-resources = "6.4.0"
installer = "0.7.0"
itsdangerous = "2.2.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
keyring = "24.3.1"
limits = "3.12.0"
mako = "1.3.5"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
more-itertools = "10.2.0"
msgpack = "1.0.8"
mysqlclient = "2.2.4"
orjson = "3.10.3"
packaging = "24.0"
passlib = "1.7.4"
pexpect = "4.9.0"
pip-review = "1.3.0"
pkginfo = "1.11.0"
platformdirs = "4.2.2"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
psycopg2 = "2.9.9"
ptyprocess = "0.7.0"
pyasn1 = "0.6.0"
pydantic = "2.7.1"
pydantic-extra-types = "2.7.0"
pydantic-settings = "2.2.1"
pydantic-core = "2.18.2"
pygments = "2.18.0"
pyproject-hooks = "1.1.0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.9"
pywin32-ctypes = "0.2.2"
pyyaml = "6.0.1"
rapidfuzz = "3.9.3"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
rsa = "4.9"
shellingham = "1.5.4"
six = "1.16.0"
slowapi = "0.1.9"
sniffio = "1.3.1"
sqlalchemy = "2.0.30"
starlette = "0.37.2"
tomlkit = "0.12.5"
trove-classifiers = "2024.5.22"
typer = "0.12.3"
typing-extensions = "4.12.0"
ujson = "5.10.0"
urllib3 = "2.2.1"
uvicorn = "0.23.2"
virtualenv = "20.26.2"
watchfiles = "0.21.0"
websockets = "12.0"
wrapt = "1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
