[tool.black]
line-length = 120

[tool.poetry]
name = "fastapi-scratch"
version = "0.1.0"
description = ""
authors = ["Pryann <pryann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
bcrypt = "^4.1.3"
humps = "^0.2.2"
pydantic-settings = "^2.3.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "test:start"
dev = "src.main:start"

[[tool.poetry.packages]]
include = "**/*.py"
